--- a/SEB113_Collaborative Scientific Article_9598138.Rmd
+++ b/SEB113_Collaborative Scientific Article_9598138.Rmd
@@ -1,14 +1,17 @@
 ---
-title: "SEB113 Collaborative Scientific Article (CSA)"
+title: \textcolor{blue}{Quantitative Analysis Report for Air Quality 2015 Clinton, Gladstone QLD.}
 author: "Yun Kai Siow, 9598138"
-date: "Sunday, June 12, 2016"
-fontsize: 11pt
-output:
+date: "`r format(Sys.time(), '%d %B, %Y')`"
+subtitle: "[github.com/nixsiow/CSA_113](https://github.com/nixsiow/CSA_113)"
+fontsize: 12pt
+output: 
   pdf_document:
     fig_caption: yes
     number_sections: no
     toc: yes
     highlight: pygments
+    includes:
+      in_header: header.tex
   md_document:
     variant: markdown_github
   html_document:
@@ -18,13 +21,13 @@ output:
   word_document:
     fig_caption: yes
 geometry: margin=1in
-linestretch: 1.5 
+linestretch: 1.15 
 bibliography: bib/references.bib
 csl: bib/apa.csl
 objects: SEB113_CSA_Objects.RData, SEB113_CSA.R
 ---
 
-```{r 'prep', eval=TRUE, echo=FALSE} 
+```{r 'setup', eval=TRUE, echo=FALSE} 
 # load in the R objects needed for the report.
 load(file="data/SEB113_CSA_Objects.RData")
 
@@ -32,6 +35,8 @@ load(file="data/SEB113_CSA_Objects.RData")
 suppressPackageStartupMessages(library(knitr))
 suppressPackageStartupMessages(library(openair))
 suppressPackageStartupMessages(library(stargazer))
+suppressPackageStartupMessages(library(gridExtra))
+suppressPackageStartupMessages(library(broom))
 
 # for citation
 suppressPackageStartupMessages(library(knitcitations))
@@ -44,18 +49,18 @@ opts_chunk$set(tidy.opts=list(width.cutoff=60))
 
 
 
-
-
-## 1. Aim {-}
+## 1. \textcolor{blue}{Aim}
 <!-- 0.5 pp -->
 <!-- Criterion: Question, need and context -->
 <!-- 7: Clear and compelling statement of the question, that is very strongly connected to the need and the context. -->
 ### Question
 <!-- What is the scientific question being addressed? (1-2 sentences) Provide a concise statement of it. -->
-What influence do meteorological measurements such as wind speed and wind direction have on the quality of air, particularly concentrations of PM2.5?
+<!-- Note: Why do we care about this analysis? Motivate the study. -->
+<!-- Note: What is the question we're answering with our analysis? -->
+What influence do meteorological measurements such as wind speed and wind direction have on the quality of air, particularly concentrations of PM~2.5~?
 
 ***
-## 2. Methods {-}
+## 2. \textcolor{blue}{Methods}
 <!-- 1-2 pp, may include diagrams -->
 <!-- Criterion: Scientific conceptual model and quantitative model, linked to data -->
 <!-- 7: Concise and logical presentation of models, with excellent visual presentations that add insight, followed by explicit and well-defined linkage to measurements and design. -->
@@ -63,9 +68,13 @@ What influence do meteorological measurements such as wind speed and wind direct
 <!-- Is there a general theory being tested in a specific situation? Or is this a pioneering analysis? -->
 
 
+
+
+
+
 ### Diagram
 <!-- Draw a conceptual model diagram showing how your variables of interest are related. Write a brief description (2-4 sentences) of how and why you believe the explanatory variables may influence the response variable (cite any publications you use). -->
-```{r, echo=FALSE, fig.cap='Global average across Oceean Health Index goals.', fig.width=5, fig.height=5}
+```{r, echo=FALSE, fig.cap=' Visual conceptual model of how PM~2.5~ concentration in the air varies according to wind speed and wind direction', fig.width=10, fig.height=10}
 library(DiagrammeR)
 grViz("
   digraph {
@@ -107,39 +116,40 @@ grViz("
   }", width = 250)
 ```
 
-![Conceptual Model](image/Conceptual_Model.jpg)
-**Figure 1: Visual conceptual model of how PM2.5 concentration in the air varies according to wind speed and wind direction.**
 
-
-As with other meteorological conditions, the explanatory variables, wind speed and wind direction are believe to have play an important role on direct or indirect correlation with the dispersion of air pollutant (e.g. PM2.5) concentration in the air ([@Dawson2007], [@Elminir2005225]) (Dawson et al., 2007; Elminir, 2005). 
+As with other meteorological conditions, the explanatory variables, wind speed and wind direction are believe to have play an important role on direct or indirect correlation with the dispersion of air pollutant (e.g. PM~2.5~) concentration in the air ([@Dawson2007], [@Elminir2005225]) (Dawson et al., 2007; Elminir, 2005). 
 
 For instance, if there is a forest fire happening at the south west of our current location, a gust of south western wind with the right speed will certainly bring the pollutant, therefore increase the pollutant concentration in the air. Vice versa, wind from other direction with certain speed could also carry away and disperse pollutants in the air.
 
-There is no specified functional form from a scientific law to describe the influence of wind speed and wind direction affect the concentration of PM2.5 in the air, so linear terms is used in this model.
-
+There is no specified functional form from a scientific law to describe the influence of wind speed and wind direction affect the concentration of PM~2.5~ in the air, so linear terms is used in this model.
 
 
 
 ### The quatitative model
 <!-- Specify how each element of the scientific conceptual model is to be quantified, whether it is a variable or fixed in the experiment. Express the model in words and in an equation. Use the model as a basis for selecting the measurements and the experimental design. Provide a clear statement of the quantitative methods to be used. -->
+<!-- Note: what is the functional form of the regression model(s) being investigated? (at this point there should be no parameter values reported, because we haven't even seen the data yet!) -->
 
-$$
-\begin{aligned}
-  log PM2.5_{i} &= \sum_{j=1}^{J} \beta_{j} \cdot I\left(WD_{i} = j\right) + \sum_{k=1}^{K} \beta_{k} \cdot WS_{i} \cdot I\left(WD_{i} = k\right) + \epsilon_{i}\\
-  \epsilon_{i} &\sim N(0,\sigma^{2})
-\end{aligned}
-$$
+<!-- equation with numbering -->
+\begin{equation} \label{eq:1}
+  \begin{aligned}
+    \log PM_{2.5i} &= \sum_{j=1}^{J} \beta_{j} \cdot I\left(WD_{i} = j\right) + \sum_{k=1}^{K} \gamma_{k} \cdot WS_{i} \cdot I\left(WD_{i} = k\right) + \epsilon_{i}\\
+    \epsilon_{i} &\sim N(0,\sigma^{2})
+  \end{aligned}
+\end{equation}
 
-Variables:
 
-- $log PM2.5_{i}$: $i$ th observation of log PM2.5
-- $WS_{i}$: Wind speed value for observation $i$
-- $WD_{i}$: Wind direction value for observation $i$
+Variables & symbols on equation (\ref{eq:1}):
+
+- log PM~2.5i~: *i*th observation of log PM~2.5~ (logarithm transformed)
+- $WS_{i}$: Wind speed value for observation *i*
+- $WD_{i}$: Wind direction value for observation *i*
+- $\beta_{j}$: Partial effect of wind direction (WD~i~) on log PM~2.5~ 
+- $\gamma_{k}$: Partial effect of interaction term of wind direction (WD~i~) and wind speed (WS~i~) on log PM~2.5~ 
 - $J$ & $K$: Total number of wind direction, 8 (e.g. N, NE, E, SE, S, SW, W, NW)
 - $I\left(\cdot\right)$: an indicator variable that tell us whether or not the statement inside (that Wind Direction has a particular value) is true.
 
 
-#### Formulate a hypothesis:
+**Formulate a hypothesis:**
 $$
 \begin{aligned}
 H_0 : \beta_1 &= 0\\
@@ -149,7 +159,7 @@ $$
 
 
 ***
-## 3. Data {-}
+## 3. \textcolor{blue}{Data}
 <!-- CSV file -->
 <!-- <1 pp for data in article -->
 <!-- remainder up to 3 pages -->
@@ -158,59 +168,160 @@ $$
 ### Preparation
 <!-- for analysis. eg transformation of variables, how outliers were treated, adjusting by an offset, or focusing on part of the data (<1 pp) -->
 
+```{r 'readSource', eval=FALSE, tidy=TRUE}
+# CSV file read from downloaded source from current working directory.
+air.quality.clinton.raw <- read.csv(file="data/clinton-aq-2015.csv", as.is=T, head=T)
 
+# Or
+
+# Read/download directly from data custodian (Queensland Government open data portal).
+url <- "http://www.ehp.qld.gov.au/data-sets/air-quality/clinton-aq-2015.csv"
+air.quality.clinton.raw <- read.csv(file=url, as.is=T, head=T)
+```
+
+
+```{r 'dataprep', echo=FALSE, eval=FALSE}
+air.quality.clinton.raw$Date <- dmy_hm(paste(air.quality.clinton.raw$Date, air.quality.clinton.raw$Time))
+# Lubridate to add few extra colume: month, day_of_week
+library(lubridate)
+air.quality.clinton.raw <- mutate(air.quality.clinton.raw,
+                                  month = month(Date, label=T),
+                                  day_of_week = wday(Date, label=T))
+
+# define data of interest & rearrange the seq & save to new df
+data.of.interest <- c("Date", "Time", "month", "day_of_week", "PM2.5..ug.m.3.", "Wind.Speed..m.s.", "Wind.Direction..degTN.")
+air.quality.clinton <- subset(air.quality.clinton.raw, select = data.of.interest)
+
+# Rename variables name
+names(air.quality.clinton) <- c("date", "time", "month", "day_of_week", "pm2.5", "ws", "wd")
+
+# Assign breakboint for cutting and labelling
+# 0 and 360 are for NORTH
+breaks = c(0, seq(22.5, 337.5, by=45), 360)
+
+# cut function dplyr to divides the range of feeded data into intervals and codes the values in "Direction" such as NE, E ...
+# according to which interval they fall. Turn the continuous variable to categorial variable
+library(dplyr)
+wd.label <- cut(air.quality.clinton$wd, breaks = breaks, dig.lab= 4, labels = c("N", "NE", "E", "SE", "S", "SW", "W", "NW", "N"), include.lowest = TRUE)
+
+# Create new categorical variable wd.label
+# Logarithm transforms PM2.5 to log.pm2.5 due to data skewness
+# Remove na value. Remove negative pm value
+air.quality.clinton <- mutate(air.quality.clinton, wd.label = wd.label) %>% 
+  mutate(log.pm2.5 = log(pm2.5)) %>%
+  na.omit %>%
+  filter(!is.nan(log.pm2.5) & !is.infinite(log.pm2.5))
+
+# Check the levels of wd.label
+levels(air.quality.clinton$wd.label)
+# regroup both "N" level into only one level, should be only 8 instead of 9
+levels(air.quality.clinton$wd.label) <- c("N", "NE", "E", "SE", "S", "SW", "W", "NW", "N")
+```
 
 
 ### Dataset
 <!-- included in a separate file in CSV format (must contain all data). Also include R code for reading data in. An extract of data should be included in the article (up to 1 pp); -->
 
+Look at the first few rows of the data to see what is contained within.
+```{r, eval=FALSE, tidy=TRUE}
+head(air.quality.clinton)
+```
+```{r, echo=FALSE, results='asis'}
+kable(head(air.quality.clinton), caption = "First 6 row of the final dataset.")
+```
 
 
 
 ### Data dictionary
 <!-- list each variable, a description, units, permissible range and any transformation required; -->
+
 **Data dictionary - variables**
 
-Abbreviation  | Variable  | Description | Units
-------------- | ------------- | ------------- | -------------
-ws  | Wind speed  | blabla  | blabla
-wd  | Wind Direction  | blabla  | blabla
-wd.label | Content  | blabla  | blabla
-pm2.5 | Content  | blabla  | blabla
-
-Table: Analysis of Deviance Table
-
-**Data dictionary - experimental units measured**
-
-Variable  | Description  | Values | Population | Sampled
+Abbreviation  | Variable  | Description | Units | Permissible range
 ------------- | ------------- | ------------- | ------------- | -------------
-ws  | Wind speed  | blabla  | blabla  | blabla
-wd  | Wind Direction  | blabla  | blabla  | blabla
-wd.label | Content  | blabla  | blabla  | blabla
-pm2.5 | Content  | blabla  | blabla  | blabla
+ws  | Wind speed  |  Measured by ultrasonic sensor with 10 metres above ground level.  | $ms^-1$ | `r range(air.quality.clinton$ws)`
+wd.label | Wind direction in 8 catagory  | Measured by ultrasonic sensor with 10 metres above ground level.  | - | `r levels(air.quality.clinton$wd.label)`
+log.pm2.5 | Log transformed PM~2.5~ | Particulate matter with an equivalent aerodynamic diameter of 2.5 micrometres or less. | $\mu g/m^3$ | `r range(air.quality.clinton$log.pm2.5)`
 
+Table: Data dictionary listed with abbreviations, descriptions, units, permissible range of each variables.
 
-The data set comprises time series of: wind speed and direction; temperature; relative humidity; rainfall; barometric pressure; oxides of nitrogen; sulfur dioxide; PM10 / PM2.5 readings; and visibility-reducing particles. 
-All updated hourly over the period from 1st January to 31st December 2015, recorded at Clinton, Gladstone Queensland (Latitude: -23.8701; Longitude: 151.2216).
+The final data set comprises time series of wind speed and direction; and PM~2.5~ readings. All updated hourly over the period from 1st January to 31st December 2015, recorded at Clinton, Gladstone Queensland (Latitude: -23.8701; Longitude: 151.2216).
 
-The dataset is released under a Creative Commons Attribution 3.0 Australia (CC BY) licence.
-[![Creative Commons Attribution](https://www.qld.gov.au/assets/v2/images/licences/by-80x15.png)](https://creativecommons.org/licenses/by/3.0/au/).
-
+```{r sensor, echo=FALSE, fig.align='center', fig.cap='Location of the physical sennsing instrument at Clinton.'}
+sensor_map
+```
 
 ### Metadata 
 <!-- including source (custodian), experimental design and accuracy. -->
 
+The dataset is released under a Creative Commons Attribution 3.0 Australia (CC BY) licence.
+[![Creative Commons Attribution](https://www.qld.gov.au/assets/v2/images/licences/by-80x15.png)](https://creativecommons.org/licenses/by/3.0/au/).
+
+**Experimental design and standards**
+
+1. **Wind:** The wind speed, $X_1$ and wind direction, $X_2$ are measured by ultrasonic sensor with 10 metres above ground level, compliant to Meteorological monitoring for ambient air quality monitoring applications (AS/NZS 3580.14:2011). Wind direction sensor is aligned to magnetic north and the output value of reported wind direction is referenced to true north by application of a magnetic declination correction of +10 degrees.
+  + **Measurement units:** 
+    + Wind speed, metres per second ($ms^-1$),
+    + Wind direction, $degTN$
+
+2. **PM~2.5~:** Particles as PM~2.5~ means particulate matter with an equivalent aerodynamic diameter of 2.5 micrometres or less. The suspended particular matter - PM~2.5~ concentrations are measured by Dichotomous Tapered Element Oscillating Balance (TEOM) Model 1405-DF fitted with Filter Dynamics Measurement System (FDMS) operated in accordance with Method 9.13, Australian Standards Methods for Pollutant Monitoring (AS/NZS 3580.9.13).
+\newline
+The FDMS system compensates for the loss of semi-volatile components from the collected particulate matter. Reported concentrations are uncorrected instrument output values and calculated from running 1-hour average concentrations updated at six minute intervals. Negative hourly PM~2.5~ concentrations down to -5$\mu g/m^3$  resulting from instrument noise at low particle concentrations are reported.
+  + **Measurement units:** micrograms per cubic metre ($\mu g/m^3$)
+
+There is no specified functional form from a scientific law to describe the influence of wind speed and wind direction affect the concentration of PM~2.5~ in the air, so linear terms is used in this model.
+
+
 ***
-## 4. Analysis {-}
+## 4. \textcolor{blue}{Analysis}
 <!-- ~3 pp -->
 <!-- Criterion: Quantitative methods for data analysis -->
 <!-- 7: Highly skilful, appropriate application of quantitative methods. -->
 ### Exploratory data analysis
 <!-- Numerical and graphical summary of data prior to quantitative analysis. Include histograms of key variables (1-2 pp). -->
+<!-- Note: What does the data look like? Numerical summaries. Graphical summaries. -->
 
-```{r , echo=FALSE, results='asis'}
-knitr::kable(head(mtcars), caption = "Title of the table")
+
+```{r, echo=FALSE, results='asis'}
+knitr::kable(summary(air.quality.clinton[,c(5,6,8)]), caption="summary of explanatory variables and outcome variable")
 ```
+
+
+<!-- histograms/plots of key variables -->
+
+PM~2.5~ is logarithm transformed to get rid of skew results.
+```{r 'pm_histograms', echo=FALSE, fig.align='center', fig.cap='blank'}
+grid.arrange(pm1, pm2, ncol=2)
+```
+
+How many observations fall on each wind category. What the most common wind direction are?
+```{r 'exploratory1', echo=FALSE, fig.align='center', fig.cap='blank'}
+wind_direction.pie
+```
+
+```{r 'exploratory2', echo=FALSE, fig.align='center', fig.cap='blank'}
+ws.histogram
+```
+
+```{r 'exploratories', echo=FALSE, fig.align='center', fig.cap='blank'}
+ws_wd.plot
+```
+
+
+```{r 'cor1', echo=FALSE, fig.align='center', fig.cap='blank'}
+pm_wd.plot
+```
+The median PM~2.5~ from North is higher than the other one from South, which might indicate that there is more air polution when the wind is blowing from the north than the south.
+
+
+```{r 'cor2', echo=FALSE, fig.align='center', fig.cap='blank'}
+pm_ws.plot
+```
+
+```{r 'cor3', echo=FALSE, fig.align='center', fig.cap='blank'}
+pm_ws_wd.plot
+```
+
 
 
 
@@ -218,42 +329,85 @@ knitr::kable(head(mtcars), caption = "Title of the table")
 ### Quantitative analysis 
 <!-- A large component of the report that, similar to the Problem-Solving tasks, provides working behind the Quantitative Methods. It is crucial that output (graphical or otherwise) from R is included then cited in text (2-4pp).  -->
 
+<!-- Note: What are the results from fitting the model(s)? -->
+
+Fit 6 models as follow:
+1. log.pm2.5 ~ ws
+2. log.pm2.5 ~ wd.label
+3. log.pm2.5 ~ ws+wd.label
+4. log.pm2.5 ~ ws:wd.label
+5. log.pm2.5 ~ wd.label + ws:wd.label
+6. log.pm2.5 ~ ws + wd.label + ws:wd.label
+
+6 models to be fit to explore effect from different paramenters and any extra variability is explaining by adding extra terms or parameters.
+
+Model 1
+```{r 'model1'}
+lm.pm_ws <- lm(data=air.quality.clinton, log.pm2.5 ~ ws)
+```
+
+Model 2
+```{r 'model2'}
+lm.pm_wd <- lm(data=air.quality.clinton, log.pm2.5 ~ wd.label - 1)
+lm.pm_wd.intercept <- lm(data=air.quality.clinton, log.pm2.5 ~ wd.label)
+```
+
+Model 3
+```{r 'model3'}
+lm.pm_ws_wd <- lm(data=air.quality.clinton, log.pm2.5 ~ ws+wd.label - 1)
+lm.pm_ws_wd.intercept <- lm(data=air.quality.clinton, log.pm2.5 ~ ws+wd.label)
+```
+
+Model 4
+```{r 'model4'}
+lm.pm_wswd <- lm(data=air.quality.clinton, log.pm2.5 ~ ws:wd.label -1)
+lm.pm_wswd.intercept <- lm(data=air.quality.clinton, log.pm2.5 ~ ws:wd.label)
+```
+
+Model 5
+Fit a linear model of log PM~2.5~ regressed on Wind direction and interaction with Wind speed
+```{r 'model5'}
+lm.pm_wd_wswd <- lm(data=air.quality.clinton, log.pm2.5 ~ wd.label-1 + ws:wd.label)
+lm.pm_wd_wswd.intercept <- lm(data=air.quality.clinton, log.pm2.5 ~ wd.label + ws:wd.label)
+```
+
+Model 6
+```{r 'model6'}
+lm.pm_ws_wd_wswd <- lm(data=air.quality.clinton, log.pm2.5 ~ ws*wd.label-1)
+lm.pm_ws_wd_wswd.intercept <- lm(data=air.quality.clinton, log.pm2.5 ~ ws*wd.label)
+```
+
+
+Coefficient of determination, R^2^ of all 6 models
+```{r, echo=FALSE, results='asis'}
+kable(models.fitness.df, caption="R2 for all models")
+```
+
+
+**Formulate a hypothesis test about models:**
+H~0~ : There is no increase in variability explained by the more complex model 5, with extra term (wind direction)
+
+Significant value set as $\alpha$ = 0.05.
 
 
 
 
-
-
-#### Formulate a ANOVA hypothesis:
-$$
-\begin{aligned}
-H_0 : \beta_1 &= 0\\
-H_1 : \beta_1 &\neq 0
-\end{aligned}
-$$  
-
-#### Interpretation of ANOVA for regression models
+**Interpretation of ANOVA for regression models**
 The p value from this hypothesis test therefore represents the probability of obtaining an F statistic at least as big as what was seen if the restricted model explained the same amount of variation as the full model. 
 
 Rejecting the null hypothesis leads us to conclude that the inclusion of the extra terms in the full model explains more variation than if we had not included these terms.
 
-The sum of square of the errors (residual sum of squares) for model 5?
+
 ```{r}
-sum(residuals(lm.pm_wswd.forR2)^2)
-```
-
-There are `` residual degrees of freedom for the model 5?
-
-
-The sum of square of the errors (residual sum of squares) for the model involving wind direction.
-```{r}
-sum(residuals(lm.pm_wd_wswd.forR2)^2)
+# model 4 nested inside of model 5
+anova(lm.pm_wswd.intercept, lm.pm_wd_wswd.intercept)
 ```
 
 ```{r}
-anova(lm.pm_wswd.forR2, lm.pm_wd_wswd.forR2)
+# Model 5 vs. Model 6, model 5 nested in model 6
+anova(lm.pm_wd_wswd.intercept, lm.pm_ws_wd_wswd.intercept)
 ```
-
+That is, does including an interaction term explain any further variation than changes in Wind direction and Wind speed would account for by themselves?
 
 
 
@@ -262,26 +416,30 @@ anova(lm.pm_wswd.forR2, lm.pm_wd_wswd.forR2)
 
 ### Estimate model parameters
 <!-- Provide estimates together with confidence intervals and relevant hypothesis tests. Include Rcode used. -->
+<!-- Note: Estimates, confidence intervals and hypothesis tests -->
 
-
-
-
-
-
-```{r 'dataframe', eval=FALSE, echo=TRUE}
-head(air.quality.clinton)
+Estimates of the parameters in this model and their 95% confidence intervals
+```{r, eval=FALSE, echo=TRUE, tidy=TRUE}
+summary(lm.pm_wd_wswd)
 ```
 
-```{r 'dataframe1', eval=TRUE, echo=FALSE, tidy=TRUE}
-stargazer(head(air.quality.clinton), type="text", summary=FALSE, title="Have a look on first few rows of data", align=TRUE)
+95% Confident interval
+```{r, echo=TRUE, eval=FALSE}
+tidy(lm.pm_wd_wswd, conf.int = T)
 ```
+```{r, echo=FALSE, results='asis'}
+kable(tidy(lm.pm_wd_wswd, conf.int = T), caption = "Confident intervals of estimated parameters.")
+```
+
 
 
 ### Assess model fit
 <!-- Use a goodness-of-fit statistic or other suitable measure -->
 
-<!-- Own Note -->
-<!-- r2  -->
+Coefficient of determination, R^2^, for thess models
+```{r, echo=FALSE, results='asis'}
+kable(models.fitness.df, caption="R2 for all models")
+```
 
 
 
@@ -289,41 +447,91 @@ stargazer(head(air.quality.clinton), type="text", summary=FALSE, title="Have a l
 ### Model checking
 <!-- Are modelling assumptions upheld or violated? (1 para) -->
 <!-- IMPERATIVE: NO DUMPING OF OUTPUT! All figures and other outputs from software must be referenced in the text (summary and highlights). -->
+<!-- Note: are the residuals normal and homogeneous? -->
+
+```{r, echo=TRUE, eval=FALSE}
+# Check lm whether the residuals are normally distributed
+df.fort.pm_wd_wswd <- fortify(lm.pm_wd_wswd)
+head(df.fort.pm_wd_wswd)
+```
 
 
-<!-- Own Note -->
-<!-- Residual checking such as: qqplot, homo plot, residual histograms, anova  -->
+```{r, echo=FALSE, eval=TRUE, fig.align='center', fig.cap='blank'}
+Resid.histogram
+```
+The residuals look more normally distributed for model 3 and model 4, but models 1 and 2 look a little more spread out. We don’t have very good resolution of the residuals, but this is mainly because we don’t have that much data, only 16 observations, so this is OK.
+
+From here we can see that our plot of the residuals looks pretty normal, and that is a good thing as it is one of the model assumptions! Huzzah!
 
 
 
+
+Homogeneity of errors
+```{r, echo=FALSE, eval=TRUE, fig.align='center', fig.cap='blank'}
+homoplot
+```
+Do the residuals look like they have a mean of zero and constant variance as we move from left to right along the fitted values axis?
+Do these plots indicate that the residuals are normally distributed and homogenous in their variance?
+
+We can see here that for both models the smaller fitted values (some of which are negative!) have residuals which are all greater than zero (indicating underprediction), that the fitted values in the 25-50 range are being overpredicted (as the residuals are negative) and that for the larger fitted values there is substantially greater variance in the residuals.
+
+
+
+QQ plot
+```{r, echo=FALSE, eval=TRUE, fig.align='center', fig.cap='blank'}
+qqplot
+```
+Do these residuals look approximately Normally distributed?
+
+It looks like these residuals are not Normally distributed due to the skewness from the histograms and the departure from the geom_abline() line sample = theoretical. Perhaps there is some structure to the unexplained variation in the residuals.
+
+For model 1., it looks like the model is over-predicting the lower (peak around -15), and under-predicting upper values (points around 100). This suggests that there is some unexplained variation!
+
+
+
+Goodness of fit plot
+```{r, echo=FALSE, eval=TRUE, fig.align='center', fig.cap='blank'}
+goodnessplot
+```
+How much do our modelled values, yhat, look like our observed values, *y~i~*
+Expect them to fall very close to a straight line.
+Are there any records where the observed PM~2.5~ are either all above or all below where we would expect them to be from the model? (i.e. where the y~i~ are all bigger or all smaller than the yhat~i~)
 
 
 ***
-## 5. Interpret {-}
+## 5. \textcolor{blue}{Interpret}
 <!-- ~1 pp -->
 <!-- Criterion: Interpretation of analyses, linked to Aims and Methods. -->
 <!-- 7: Thorough and insightful interpretation of Quantitative analyses, which is very strongly connected to the Aims and Methods. -->
 ### Model interpretation
 <!-- Provide a plain English interpretation that gives a holistic (overall) view of the results (1-3 paragraphs). -->
-
+<!-- Note: What do our results mean in terms of the question of interest? Use the results from the analysis section to back up your claims. -->
 
 
 
 ### Link back 
 <!-- to the Question: provide a plain English interpretation of the model and what it means, in terms of the original question (1-2 sentences). -->
-
+<!-- Note: Are there any problems with our models? How would we fix them if we could? -->
 
 
 
 ### Compare
 <!-- to other relevant findings -->
-
+<!-- Note: What have others done in the same field? Do our results lead to the same conclusions? -->
 
 
 
 
 ```{r, echo=FALSE, fig.cap='Global average across Oceean Health Index goals.', fig.width=5, fig.height=5}
-polarPlot(air.quality.clinton, pollutant = 'pm2.5', resolution="fine")
+polarPlot(air.quality.clinton,
+          resolution="fine",
+          pollutant="pm2.5",
+          col="jet",
+          key.position="bottom",
+          key.header="mean PM2.5 (ug/m3)",
+          key.footer=NULL,
+          ylab = "Wind Speed (m/s)",
+          main = "Polar plot of mean of PM2.5 concentration in all direction")
 ```
 
 
@@ -336,6 +544,8 @@ polarPlot(air.quality.clinton, pollutant = 'pm2.5', resolution="fine")
 citep(citation("ggmap"))
 citep(citation())
 citep(citation("openair"))
+citet("Dependence of urban air pollutants on meteorology")
+citet("Conditional bivariate probability function for source identification")
 ```
 
 
@@ -354,5 +564,5 @@ write.bibtex(file="bib/references.bib")
 
 
 \newpage
-## References
-
+## \textcolor{blue}{References}
+<!-- What resources did you use to help justify claims that don't arise from your analysis? Do you need to cite an article/book/R package for where your data came from? All references listed must have been used somewhere in the text. -->
