--- a/bib/references.bib
+++ b/bib/references.bib
@@ -21,6 +21,33 @@
   doi = {10.1016/j.envsoft.2011.09.008},
 }
 
+@Article{Uria_Tellaetxe_2014,
+  doi = {10.1016/j.envsoft.2014.05.002},
+  url = {http://dx.doi.org/10.1016/j.envsoft.2014.05.002},
+  year = {2014},
+  month = {sep},
+  publisher = {Elsevier {BV}},
+  volume = {59},
+  pages = {1--9},
+  author = {Iratxe Uria-Tellaetxe and David C. Carslaw},
+  title = {Conditional bivariate probability function for source identification},
+  journal = {Environmental Modelling {\&} Software},
+}
+
+@Article{Elminir_2005,
+  doi = {10.1016/j.scitotenv.2005.01.043},
+  url = {http://dx.doi.org/10.1016/j.scitotenv.2005.01.043},
+  year = {2005},
+  month = {nov},
+  publisher = {Elsevier {BV}},
+  volume = {350},
+  number = {1-3},
+  pages = {225--237},
+  author = {Hamdy K. Elminir},
+  title = {Dependence of urban air pollutants on meteorology},
+  journal = {Science of The Total Environment},
+}
+
 @Manual{Carslaw_2016,
   title = {{openair}: Open-source tools for the analysis of air pollution data},
   author = {David Carslaw and Karl Ropkins},
